--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -100,8 +100,8 @@ Community volunteers maintain <<xref/../../guides/getting_started#,Getting Start
 * https://sekao.net/nightcode/[Nightcode]
 * http://www.lighttable.com/[Light Table]
 * http://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
-* https://atom.io[Atom] with https://atom.io/packages/nrepl[nrepl]
-* https://code.visualstudio.com[Visual Studio Code] with https://github.com/avli/clojureVSCode[clojureVSCode]
+* https://atom.io[Atom] with https://github.com/mauricioszabo/atom-chlorine[Chlorine]
+* https://code.visualstudio.com[Visual Studio Code] with https://github.com/BetterThanTomorrow/calva[Calva]
 * http://doc.ccw-ide.org/[Eclipse Counterclockwise] (inactive)
 
 == Conferences
