--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -11,7 +11,7 @@ toc::[]
 
 Welcome to Clojure!
 
-Check out <<learn/syntax#,Learn Clojure>>, <<xref/../../community/resources#,Resources>>, or <<xref/../../community/books#,Books>> for learning the language!
+Check out <<learn/syntax#,Learn Clojure>>, <<xref/../../community/resources#,Resources>>, or <<xref/../../community/books#,Books>> to learn the language!
 
 == Dependencies
 
