--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -95,7 +95,7 @@ Community volunteers maintain <<xref/../../guides/getting_started#,Getting Start
 * https://leiningen.org/[Leiningen] - an extensible build tool that provides dependency management, REPL support, testing, packaging, deployment, and many other capabilities.
 * http://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
 * http://www.gnu.org/software/emacs/[Emacs] with https://github.com/clojure-emacs/cider[CIDER]
-* http://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace]
+* http://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace] or https://github.com/liquidz/vim-iced[Vim-Iced]
 * IntelliJ https://cursiveclojure.com/[Cursive]
 * https://sekao.net/nightcode/[Nightcode]
 * http://www.lighttable.com/[Light Table]
