add some links to Ask Clojure

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -14,6 +14,7 @@ There are many ways to make a meaningful contribution to the Clojure community:
 * Advocate for the use of Clojure in your organization
 * Use Clojure and share your experience via talks, blogs, etc
 * Start or join a local meetup
+* Answer questions in https://ask.clojure.org[Ask Clojure]
 * Help new Clojure users in Slack or other forums
 * Create or provide patches to open source libraries
 * Create or improve Clojure tools
