--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -45,7 +45,6 @@ Community:
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://clojurecademy.com/[Clojurecademy] - interactive Clojure learning
 * https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
-* http://www.clojure-toolbox.com/[Clojure Toolbox] - a categorized index of Clojure libraries
 
 Newsletters
 
@@ -92,17 +91,24 @@ Video training (commercial):
 
 Community volunteers maintain <<xref/../../guides/getting_started#,Getting Started>> documentation for a number of different tools and approaches. Some of the most commonly used tools include:
 
+* <<xref/../../guides/deps_and_cli#,Clojure tools>>
 * https://leiningen.org/[Leiningen] - an extensible build tool that provides dependency management, REPL support, testing, packaging, deployment, and many other capabilities.
-* http://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
-* http://www.gnu.org/software/emacs/[Emacs] with https://github.com/clojure-emacs/cider[CIDER]
-* http://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace] or https://github.com/liquidz/vim-iced[Vim-Iced]
-* IntelliJ https://cursiveclojure.com/[Cursive]
-* https://sekao.net/nightcode/[Nightcode]
-* http://www.lighttable.com/[Light Table]
-* http://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
+* https://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
+* https://clojars.org/[Clojars] - Clojure-focused Maven repository
+* https://www.gnu.org/software/emacs/[Emacs] with https://github.com/clojure-emacs/cider[CIDER]
+* https://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace] or https://github.com/liquidz/vim-iced[Vim-Iced]
+* https://www.jetbrains.com/idea/[IntelliJ] with https://cursiveclojure.com/[Cursive]
 * https://atom.io[Atom] with https://github.com/mauricioszabo/atom-chlorine[Chlorine]
 * https://code.visualstudio.com[Visual Studio Code] with https://github.com/BetterThanTomorrow/calva[Calva]
-* http://doc.ccw-ide.org/[Eclipse Counterclockwise] (inactive)
+* https://sekao.net/nightcode/[Nightcode]
+* http://www.lighttable.com/[Light Table]
+* https://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
+* https://doc.ccw-ide.org/[Eclipse Counterclockwise] (inactive)
+
+Libraries:
+
+* https://clojars.org/[Clojars] - Clojure-focused Maven repository
+* http://www.clojure-toolbox.com/[Clojure Toolbox] - a categorized index of Clojure libraries
 
 == Conferences
 
