Add maria.cloud to community resources

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -45,6 +45,7 @@ Community:
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://clojurecademy.com/[Clojurecademy] - interactive Clojure learning
 * https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
+* https://www.maria.cloud/ - a coding environment for beginners.
 
 Newsletters
 
