--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -44,8 +44,8 @@ Community:
 * http://www.4clojure.com/[4clojure] - Clojure practice problems
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://clojurecademy.com/[Clojurecademy] - interactive Clojure learning
-* https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
-* https://www.maria.cloud/ - a coding environment for beginners.
+* https://guide.clojure.style/[Clojure Style Guide]
+* https://www.maria.cloud/[Maria] - a coding environment for beginners
 
 Newsletters
 
