add java varargs to java interop page

--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -229,6 +229,14 @@ Clojure supports the creation, reading and modification of Java arrays. It is re
 
 Note that many other Clojure functions work with arrays such as via the <<sequences#,seq library>>. The functions listed here exist for initial creation of arrays, or to support mutation or higher performance operations on arrays.
 
+=== Vararg methods
+
+Java vararg methods treat the trailing varargs parameter as an array. They can be invoked from Clojure by passing an explicit array in place of the vargs.
+
+Depending on the varargs type, use the type-specific array constructors for primitives or `into-array` to make an array of a specific type.
+
+See the <<xref/../../guides/faq#varargs,FAQ>> for examples.
+
 [%hardbreaks]
 Create array from existing collection: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/aclone[aclone] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/amap[amap] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/to-array[to-array] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/to-array-2d[to-array-2d] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/into-array[into-array]
 Multi-dimensional array support: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/aget[aget] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/aset[aset] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/to-array-2d[to-array-2d] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/make-array[make-array]
